[package]
name = "profile-bee-common"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "Shared types between profile-bee userspace and eBPF programs"
repository = "https://github.com/zz85/profile-bee"

[features]
default = []
user = [ "aya" ]

[dependencies]
aya = { version = ">=0.11", optional=true }

[lib]
path = "src/lib.rs"
