[package]
name = "profile-bee-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Terminal-based flamegraph viewer for profile-bee (forked from flamelens)"

# Original flamelens license and attribution:
# MIT License - Copyright (c) 2024 Yung Siang Liau
# Repository: https://github.com/YS-L/flamelens

[dependencies]
anyhow = "1.0"
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-input = "0.11.1"

[features]
default = []
