[package]
name = "profile-bee"
version = "0.3.0"
edition = "2021"
publish = false

include = [
  "build.rs",
  "Cargo.toml",
  "files.rs",
  "src/**/*.rs",
  "bin/**/*.rs",
]

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.2.1"
profile-bee-common = { path = "../profile-bee-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time", "process"] }
thiserror = "1.0"
addr2line = "0.24"
proc-maps = "0.4"
inferno = "0.11.10"
procfs = "0.17"
serde_json = "1.0"
serde = { version = "1", features = ["derive", "rc"] }
warp = "0.3"
bytes = "1"
tokio-stream = "0.1"
futures-util = "0.3"
tracing = "0.1.41"
blazesym = "0.2.0-rc.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gimli = "0.31.1"
object = "0.37.0"
libc = "0.2.86"
procmaps = "0.4.1"

[[bin]]
name = "profile-bee"
path = "bin/profile-bee.rs"

