[package]
name = "profile-bee"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "eBPF-based CPU profiler with flamegraph generation, DWARF unwinding, and interactive TUI"
repository = "https://github.com/zz85/profile-bee"
readme = "../README.md"

include = [
  "build.rs",
  "Cargo.toml",
  "../README.md",
  "src/**/*.rs",
  "bin/**/*.rs",
  "assets/**",
  "ebpf-bin/profile-bee.bpf.o",
]

[dependencies]
aya = { git = "https://github.com/Brskt/aya", branch = "hashmapofmaps-new" }
aya-log = { git = "https://github.com/Brskt/aya", branch = "hashmapofmaps-new" }
profile-bee-common = { version = "0.3.2", path = "../profile-bee-common", features=["user"] }
profile-bee-tui = { version = "0.3.2", path = "../profile-bee-tui", optional = true }
anyhow = "1.0.42"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time", "process"] }
thiserror = "1.0"
addr2line = "0.24"
proc-maps = "0.4"
inferno = "0.11.10"
procfs = "0.17"
serde_json = "1.0"
serde = { version = "1", features = ["derive", "rc"] }
warp = "0.3"
bytes = "1"
tokio-stream = "0.1"
futures-util = "0.3"
tracing = "0.1.41"
blazesym = "0.2.0-rc.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gimli = "0.31.1"
object = "0.37.0"
libc = "0.2.86"
procmaps = "0.4.1"
regex = "1"
memmap2 = "0.9"
lru = "0.12"

[features]
default = ["tui"]
tui = ["dep:profile-bee-tui"]

[[bin]]
name = "probee"
path = "bin/profile-bee.rs"

[[bin]]
name = "pbee"
path = "bin/profile-bee.rs"

