[package]
name = "profile-bee"
version = "0.3.12"
edition = "2021"
license = "MIT"
description = "eBPF-based CPU profiler with flamegraph generation, DWARF unwinding, and interactive TUI"
repository = "https://github.com/zz85/profile-bee"
readme = "../README.md"

include = [
  "build.rs",
  "Cargo.toml",
  "../README.md",
  "src/**/*.rs",
  "bin/**/*.rs",
  "assets/**",
  "ebpf-bin/profile-bee.bpf.o",
]

[dependencies]
aya = { package = "profile-bee-aya", version = "0.13.2" }
aya-log = { package = "profile-bee-aya-log", version = "0.2.2" }
profile-bee-common = { version = "0.3.12", path = "../profile-bee-common", features=["user"] }
profile-bee-symbols = { path = "../profile-bee-symbols" }
profile-bee-tui = { version = "0.3.12", path = "../profile-bee-tui", optional = true }
anyhow = "1.0.42"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time", "process"] }
thiserror = "1.0"
addr2line = "0.24"
inferno = "0.11.10"
procfs = "0.17"
serde_json = "1.0"
serde = { version = "1", features = ["derive", "rc"] }
warp = "0.3"
bytes = "1"
tokio-stream = "0.1"
futures-util = "0.3"
tracing = "0.1.41"
blazesym = "0.2.0-rc.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gimli = "0.31.1"
object = "0.37.0"
libc = "0.2.86"
regex = "1"
memmap2 = "0.9"
lru = "0.12"
prost = "0.13"
flate2 = "1"
strip-ansi-escapes = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
parking_lot = "0.12"
aws-sdk-codeguruprofiler = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
tonic = { version = "0.12", features = ["gzip", "transport"], optional = true }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost", "transport"], optional = true }
protox = { version = "0.7", optional = true }

[features]
default = ["tui", "aws", "otlp"]
tui = ["dep:profile-bee-tui"]
aws = ["dep:aws-sdk-codeguruprofiler", "dep:aws-config"]
otlp = ["dep:tonic", "dep:tonic-build", "dep:protox"]

[[bin]]
name = "probee"
path = "bin/profile-bee.rs"

[[bin]]
name = "pbee"
path = "bin/profile-bee.rs"

